<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/user"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/user"/>
    <item
        android:id="@+id/message"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/message"/>
    <item
        android:id="@+id/book"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/book"/>

    <item
        android:id="@+id/moon"
        android:enabled="true"
        android:icon="@drawable/ic_moon"
        android:title="@string/moon"/>
</menu>